--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,14 @@
   text-align: center;
 }
 
+.container {
+  margin:200px 35%;
+  background-color:bisque;
+  padding:20px;
+  max-width: 330px;
+}
+
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
