--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,28 @@
 .App {
   text-align: center;
+
+}
+
+
+h1{
+  max-width: 400px;
+  color:white;
+  margin: 0 auto;
+  margin-top: 30px;
+  margin-bottom: 30px;
 }
 
 .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
+
+.question-list{
+  background-color: beige;
+  max-width: auto;
+  
+}
+
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
