--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,26 @@
   color: white;
 }
 
+
+
+.input{
+  padding: 4px;
+  margin: 30px;
+}
+.title{
+  margin:120px auto;
+  padding: 20px;
+  border: 1px solid black;
+  border-radius: 5px;
+  background-color:blanchedalmond;
+  width: fit-content;
+}
+.container{
+  min-height: 500px;
+  width: 500px !important;
+  background-color:azure;
+}
+
 .App-link {
   color: #61dafb;
 }
